force-app/main/default/objects/footprint__footprint_Listview__c/footprint__footprint_Listview__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>footprint_ListView</label>
</CustomObject>