force-app/main/default/objects/footprint__footprint_Listview__c/fields/footprint__formula__c.field-meta.xml
<CustomField>
    <fullName>footprint__formula__c</fullName>
    <label>formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>