force-app/main/default/objects/footprint__footprint_Listview__c/fields/footprint__hasBeenDeleted__c.field-meta.xml
<CustomField>
    <fullName>footprint__hasBeenDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasBeenDeleted</label>
    <type>Checkbox</type>
</CustomField>