force-app/main/default/objects/footprint__footprint_Listview__c/fields/footprint__Label__c.field-meta.xml
<CustomField>
    <fullName>footprint__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>