force-app/main/default/objects/footprint__footprint_Listview__c/fields/footprint__sharing__c.field-meta.xml
<CustomField>
    <fullName>footprint__sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if true then everybody should see this list view</description>
    <label>sharing with all</label>
    <type>Checkbox</type>
</CustomField>